# ComfyUI-ProfileManager

./: README.md  TASK.MD  __init__.py  pyproject.toml  requirements.md  test_profile_files.py  test_profiles.py
profiles/anime/: profile.yaml  requirements.txt
profiles/anime/workflows/: anime_character.json
profiles/base/: profile.yaml  requirements.txt
profiles/ipadapter/: profile.yaml  requirements.txt
profiles/professional/: profile.yaml  requirements.txt
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  types.ts
ui/src/components/: CreateProfileModal.tsx  ProfileDetails.tsx  ProfileList.tsx
